2004-11-10  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (install-data-local): Don't try to install version.h. My
	implementation of that broke the build. :-(

2004-11-09  Eric B. Weddington  <ericw@evcohs.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	
	* include/avr/ina90.h (_NOP): Add semicolon to statement in block to
	avoid parse error. [Bug #10946]
	(_CLI): Ditto.
	(_SEI): Ditto.
	(_WDR): Ditto.
	(_SLEEP): Ditto.
	(_OPC): Ditto.
	(_LPM): Ditto.
	(_ELPM): Ditto.
	(output(port, val)): Ditto. Also correct parentheses around parameters.

2004-11-08  Eric B. Weddington  <ericw@evcohs.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/iomx8.h (WDEE): Correct bit name WDEE to WDE to match the 
	data sheet.
	* include/avr/wdt.h (_wdt_write): Add ability to switch the watchdog 
	control register being used if device is tiny2313, mega48, mega88,
	mega168. Add new watchdog timeout constants. [Bug #10811, Bug #10872] 
	Select correct macro to use for at90can128. [Bug #10905]
	* include/avr/wdt.h: Add include of <stdint.h>. Typecast value in
	_wdt_write to uint8_t to make macro -mint8 compatible.

2004-11-03  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom162.h: Correct license with permission from Nils 
	Kristian Strom.
	* include/avr/iom169.h: Correct license with permission from Juergen 
	Schilling.
	* doconf: Add copyright notice.
	* dodist: Ditto.
	* domake: Ditto.
	* reconf: Ditto.

2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* AUTHORS: Forgot to add Alexander Popov.

2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom32.h: Correct license with permission from
	Steinar Haugen.
	* include/avr/iom64.h: Ditto.
	* include/avr/iom8515.h: Ditto.
	* include/avr/iom8535.h: Ditto.

2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iotn2313.h: Correct license with permission from
	Bob Paddock.
	* include/avr/wdt.h: Correct license with permission from Marek
	Michalkiewicz.