@@ -1,3 +1,11 @@
+2004-11-10  Eric B. Weddington  <ericw@evcohs.com>
+
+	* include/avr/iom128.h: Correct license with permission from Peter 
+	Jansen.
+	* configure.in: Correct license with permission from Reinhard Jessich.
+	* include/math.h: Correct license with permission from Michael Stumpf.
+	* include/ctype.h: Ditto.
+
 2004-11-10  Theodore A. Roth  <troth@openavr.org>
 
 	* Makefile.am (install-data-local): Don't try to install version.h. My
